# adventofcode

./: .gitignore  LICENSE.md  README.md  langs.txt
2015/day03/: prog.sh
2015/day04/: prog.sql
2015/day07/: prog.lua  test.lua
2015/day10/: README
2015/day11/: README
2015/day12/: prog.sh  prog2.sh  smallred.txt
2015/day13/: prog.scala
2015/day14/: prog.escript
2015/day16/: prog.kt
2015/day17/: prog.groovy
2015/day19/: prog.rkt
2015/day20/: README  div2.rb  prog1.gs  prog2.gs  run.sh
2015/day21/: prog.cs
2015/day22/: input.txt  prog.pike
2015/day24/: prog.py
2016/: langs.txt
2016/day01/: day01.c  small.txt
2016/day02/: day02.py
2016/day03/: .gitignore  README.md  mix.exs  small.txt
2016/day04/: output.txt
2016/day05/: day05-faster.py  day05.py
2016/day06/: day06.py
2016/day07/: day07.py
2016/day08/: day08.py
2016/day09/: day09.py
2016/day10/: day10.py
2016/day11/: day11-fast.py  day11-faster.py  day11.py  input2.txt  small2.txt
2016/day12/: day12.py
2017/: .gitignore
2018/: .gitignore  run.sh
2018/day09/: Cargo.toml  solve.rs  solve2.rs
2020/day01/: Cargo.toml
2020/day01/src/: main.rs
2020/day13/: Cargo.toml
2020/day13/src/: main.rs
day01/: prog.c
day02/: prog.cpp
day03/: small.txt
day06/: prog.rb  prog2.rb  small.txt
day07/: input2.txt  prog.lua
day08/: prog.java
day10/: prog.js
day11/: prog.js
day14/: prog2.escript
day15/: prog.hs  run.sh
day18/: prog.rs
day19/: reduce.pl  small3.txt
day20/: div.rb
day22/: small.txt
day23/: prog.p6
day25/: prog.pl  small.txt
(+377 files in other folders)
