[package]
name = "solve"
version = "0.1.0"
authors = ["Dan Shiovitz <dshiovitz@fb.com>"]
edition = "2018"

[dependencies]
lazy_static = "1.2.0"
regex = "1"
failure = "0.1.3"
itertools = "0.5.10"

[[bin]]
name = "solve"
path = "solve.rs"

[[bin]]
name = "solve2"
path = "solve2.rs"

[profile.release]
debug = true
